<resources>
    <string name="app_name" translatable="false">penquiz</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!--    My String   -->
    <!-- LoginActivity -->
    <string name="emailpassword_title_text">Log in</string>

    <!-- RegisterActivity -->
    <string name="register">Register</string>
    <string name="hint_password">Password</string>
    <string name="hint_conf_password">Re-enter password</string>

    <string name="register">ลงทะเบียน</string>
    <string name="hint_password">รหัสผ่าน</string>
    <string name="hint_conf_password">รหัสผ่านอีกครั้ง</string>
    <string name="cancel_th">ยกเลิก</string>

    <string name="cancel">CANCEL</string>
    <string name="confirm_register">Confirm</string>
    <string name="hint_user_id_th">ไอดี</string>
    <string name="hint_user_id">User ID</string>
    <!--    -->
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="custom_auth_signin_status_user">User ID: %s</string>
    <string name="custom_auth_signin_status_failed">Error: sign in failed</string>

    <string name="error_sign_in_failed">Sign in failed, see logs for details.</string>
    <string name="logo">logo</string>

    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="quiz_name">quizename</string>

    <!--    Contact fragment-->
    <string name="sendfeedback">SEND</string>
    <string name="textfeedback">write feedback</string>
    <string name="contact_us">Contact us</string>
    <!--    Setting fragment -->
    <string name="setting_profiel">Setting</string>

    <!--    QuizActivity-->
    <string name="back">back</string>
    <string name="next">next</string>
    <string name="choice1">choice1</string>
    <string name="choice2">choice2</string>
    <string name="choice3">choice3</string>
    <string name="choice4">choice4</string>
    <string name="ques_title">question title</string>
    <string name="ques_description">description</string>

    <!-- Added by Aom, Somoh - Setting Fragment -->
    <string name="setting_description">Change Profile Picture</string>
    <string name="save_button">Save</string>
    <string name="Language_choice">Select Language:</string>
    <string name="english_button">English</string>
    <string name="Thai_button">Thai</string>
    <string name="label_setting">Setting</string>
    <string name="Error_message">\"Enter Your Message \"</string>
    <string name="Show_username">Username</string>


</resources>
