<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ques_title"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ques_title" />

        <TextView
            android:id="@+id/ques_description"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/ques_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">

            <Button
                android:id="@+id/choice1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choice1" />

            <Button
                android:id="@+id/choice2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choice2" />

            <Button
                android:id="@+id/choice3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choice3" />

            <Button
                android:id="@+id/choice4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choice4" />
        </LinearLayout>

        <LinearLayout
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>