<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="4">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/detail"
        style="@style/ThemeOverlay.MyTextDetail"
        android:layout_width="match_parent"
        tools:text="Firebase User ID: 123456789abc" />

    <!-- This part group all email and password with buttons -->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="109dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/emailPasswordFields"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/emailpassword_title_text"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_width="371dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/signed_out" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signedInButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone"
        android:weightSum="2.0">

        <Button
            android:id="@+id/signOutButton"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/verifyEmailButton"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/verify_email"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailPasswordButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="10dp"
        android:paddingRight="16dp">

        <Button
            android:id="@+id/emailSignInButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/emailCreateAccountButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>
</LinearLayout>


