<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/emailPasswordFields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/fieldConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="@drawable/input_field"
            android:hint="@string/hint_conf_password"
            android:inputType="textPassword" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailPasswordButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="104dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailPasswordFields"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/cancelRegister"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="@color/blueshade" />

        <Button
            android:id="@+id/confirmRegister"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/confirm_register"
            android:backgroundTint="@color/blueshade"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>