<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_view"
    android:elevation="1dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/DetailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/quizimage"
                android:layout_width="match_parent"
                android:layout_height="400px"
                android:layout_margin="5dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:srcCompat="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quiz_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/quiz_name"
                android:textColor="@color/blueshade"
                android:fontFamily="@font/dmsans"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quiz_detail"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:fontFamily="@font/dmsans"
                android:textSize="16dp"
                android:textColor="@color/darkgrey"
                android:text="@string/textview"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>