<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- android:scaleType="fitCenter, centerInside" : to make the image the same size as the button
            android:adjustViewBounds="true" if your image has unequal height/width.
            app:srcCompat="@drawable/logo"
            success
            -->

            <!--            <de.hdodenhof.circleimageview.CircleImageView-->

            <!--                android:id="@+id/camera_image"-->
            <!--                android:layout_width="120dp"-->
            <!--                android:layout_height="120dp"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginTop="30dp"-->
            <!--                android:adjustViewBounds="true"-->
            <!--                android:background="@drawable/roundcorner"-->
            <!--                android:onClick="addOperation"-->

            <!--                android:src="@drawable/ic_setting_camera"-->
            <!--                tools:ignore="VectorDrawableCompat" />-->


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/camera_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/roundcorner"
                android:onClick="addOperation"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_setting_camera" />

            <!-- android:scaleType="centerCrop"-->
            <TextView
                android:id="@+id/text_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/setting_description"
                tools:text="@string/setting_description" />

            <TextView
                android:id="@+id/text_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/Show_username"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/text_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/Language_choice"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="146dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="60dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="21dp"
                        app:srcCompat="@drawable/logo_eng" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="60dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="35dp"
                        app:srcCompat="@drawable/logo_thai" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_thai"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="44dp"
                        android:text="@string/english_button" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/button_english"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="89dp"
                        android:text="@string/Thai_button"


                        />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>